# EVRP

./: .gitignore  Algorithms.hpp  CMakeLists.txt  EVRP.cpp  EVRP.hpp  HMAGS.cpp  HMAGS.hpp  README.md  SA.cpp  SA.hpp  SACO.cpp  SACO.hpp  algorithms.cpp  evrp_graph  evrpgraph.py  individual.cpp  individual.hpp  main  main.cpp  mainclear  makefile  runfile  stats.benchmark.E-n101-k8.evrp.txt  stats.cpp  stats.hpp  utils.cpp  utils.hpp  visual.ipynb  visual_1.ipynb
Data/: file.txt  file_1.txt  file_10.txt  file_11.txt  file_12.txt  file_13.txt  file_14.txt  file_15.txt  file_16.txt  file_17.txt  file_18.txt  file_19.txt  file_2.txt  file_20.txt  file_3.txt  file_4.txt  file_5.txt  file_6.txt  file_7.txt  file_8.txt  file_9.txt  location.txt
benchmark/: main
evrp-exe/: main.cpp
lib/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/include/: Algorithms.hpp  EVRP.hpp  Solution.hpp  individual.hpp  stats.hpp  utils.hpp
lib/src/: EVRP.cpp  GSGA.cpp  GreedySearch.cpp  HMAGS.cpp  SA.cpp  SACO.cpp  Solution.cpp  individual.cpp  stats.cpp
src/: EVRP.cpp
tmp-outputs/: stats.GS_E-n23-k3.evrp.txt  stats.HMAGS_E-n23-k3.evrp.txt
tmp-outputs/1/: solution_HMAGS_E-n101-k8.evrp.txt  solution_HMAGS_E-n23-k3.evrp.txt
